[package]
name = "bettercp"
authors = ["Shounak Das <shounakdas@protonmail.com>"]
description = "A better way to copy files. Using bettercp, you can not only copy files to another location, but also rename it." 
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.11", features = ["derive"] }
